--- a/mon_projet/config/packages/translation.yaml
+++ b/mon_projet/config/packages/translation.yaml
@@ -1,5 +1,10 @@
 framework:
-    default_locale: en
+    default_locale: fr   
     translator:
         default_path: '%kernel.project_dir%/translations'
-        providers:
+
+        providers: { }
+
+        # Langue de secours si la traduction n’existe pas
+        fallbacks:
+            - fr
